fix: links and tiles on tablet

--- a/src/styles/blocks/_button.scss
+++ b/src/styles/blocks/_button.scss
@@ -1,4 +1,4 @@
 .button {
   @extend %button;
-
+  cursor: pointer;
 }
