--- a/src/styles/blocks/_card.scss
+++ b/src/styles/blocks/_card.scss
@@ -4,6 +4,7 @@
   @include transition-vendor($transition);
   &:hover {
     @include transform-vendor(scale(103%));
+    cursor: pointer;
   }
   &:hover > * {
     @include transform-vendor(scale(103%));
