--- a/src/styles/blocks/_nav.scss
+++ b/src/styles/blocks/_nav.scss
@@ -76,6 +76,7 @@
     order: 2;
     padding: 40px 20px;
     margin: 0 20px;
+    cursor: pointer;
   }
 
   &__checkbox {
@@ -86,6 +87,7 @@
     right: 42px;
     z-index: 5;
     opacity: 0;
+    cursor: pointer;
 
     &:checked ~ .nav__menu {
       transform: translateX(0%);
@@ -93,6 +95,7 @@
 
     &:checked ~ .nav__hamburger > .clicked {
       opacity: 1;
+      cursor: pointer;
     }
 
     &:checked ~ .nav__hamburger > .main-icon {
@@ -105,6 +108,7 @@
 
     &:checked:hover ~ .nav__hamburger > .clicked {
       opacity: 1;
+      cursor: pointer;
     }
 
     &:checked:hover ~ .nav__hamburger > .main-icon {
@@ -125,6 +129,7 @@
 
     &:hover ~ .nav__hamburger > .loading-bar {
       opacity: 1;
+      cursor: pointer;
     }
   }
 
