--- a/src/styles/blocks/_tile.scss
+++ b/src/styles/blocks/_tile.scss
@@ -20,9 +20,13 @@
     @media (max-width: 375px) {
       max-width: 40%;
     }
+    @media (max-width: 768px) {
+      max-width: 53%;
+    }
     @include transition-vendor(0.3s);
     &:hover {
       @include transform-vendor(scale(98%));
+      cursor: pointer;
 
     }
   }
@@ -38,6 +42,7 @@
     @include transition-vendor(0.3s);
     &:hover {
       @include transform-vendor(scale(103%));
+      cursor: pointer;
 
     }
   }
